--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 .degrade-ifms {
   background: rgb(0, 164, 11);
-  background: linear-gradient(
-    180deg,
-    rgba(0, 164, 11, 1) 0%,
-    rgba(191, 238, 145, 1) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(0, 164, 11, 1) 0%,
+      rgba(191, 238, 145, 1) 100%);
 }
-.vermelho{
+
+.vermelho {
   color: crimson;
 }
-.azul{
+
+.azul {
   color: rgb(10, 131, 206);
 }
